<resources>
    <string name="app_name">Eco Craft</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_register">Sign Up</string>
    <string name="welcome_back">Welcome Back, EcoCrafter!</string>
    <string name="welcome">Welcome, EcoCrafter!</string>
    <string name="login">Sign In to Continue</string>

    <string name="title_home">Home</string>
    <string name="title_detection">Detection</string>
    <string name="title_profile">Profile</string>



    <string name="detection_title">Detection</string>
    <string name="detection_instruction1">Come on,</string>
    <string name="detection_instruction2">Get to know your trash!!</string>
    <string name="detection_word">Select an Image to Analyze</string>
    <string name="take_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>

    <string name="title_Profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_password">Password</string>
    <string name="logout">Logout</string>


    <string name="sign_Up">Please create an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password_hint">Enter your password</string>
    <string name="name_hint">Enter your name</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="sign_up_here">Sign Up Here!</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_in_here">Sign In Here!</string>
    <string name="title_activity_home">home</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="ok">OK</string>
    <string name="field_is_required">%1$s is required</string>
    <string name="loading">Loading...</string>
    <string name="registration_successful">Registration successful</string>
    <string name="your_account_has_been_created_successfully_please_login_to_continue">Your account has been created successfully. Please login to continue.</string>
    <string name="give_permission_to_access_your_camera">Give permissions to access your camera</string>
    <string name="no_recommendation_found">No recommendation found</string>
    <string name="detection_ke">Detection History %1$d</string>
    <string name="no_history_yet">No History Yet</string>
    <string name="crafts_empty">Crafts empty</string>
    <string name="image_is_required">Image is required</string>
    <string name="delete_post">Delete post</string>
    <string name="are_you_sure_you_want_to_delete_this_post">Are you sure you want to delete this post?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>