<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:contentDescription="@null"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:text="@string/welcome_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/tauri"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_1"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/tauri"
        android:textColor="@color/white_green"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@id/txt_2"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/tauri"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"/>

        <EditText
            android:id="@+id/shape1"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:fontFamily="@font/tauri"
            android:gravity="start|center_vertical"
            android:background="@drawable/shape1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/tauri"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"/>

        <EditText
            android:id="@+id/shape2"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:fontFamily="@font/tauri"
            android:gravity="start|center_vertical"
            android:background="@drawable/shape1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:fontFamily="@font/tauri"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        android:backgroundTint="@color/deep_green"
        android:text="@string/button_sign_in"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textSize="14sp"
        android:fontFamily="@font/tauri"
        android:textColor="@color/black"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txt_sign_up_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_here"
        android:textSize="14sp"
        android:layout_below="@id/txt_dont_have_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/tauri"
        android:textColor="@color/white_green"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>
