<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/backgroud"
    tools:context=".ui.detection.DetectionFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Detection"
                android:fontFamily="@font/ribeye"
                android:textSize="22sp"
                android:textColor="@color/deep_green"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"
                android:layout_marginStart="5dp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/history_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|top"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/baseline_history_24" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detection_instruction1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/ribeye"
        android:textSize="27sp"
        android:textColor="@color/deep_green" />

    <TextView
        android:id="@+id/txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detection_instruction2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ribeye"
        android:textSize="27sp"
        android:textColor="@color/deep_green" />

    <TextView
        android:id="@+id/select_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detection_word"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/tauri"
        android:textSize="23sp"
        android:textColor="@color/deep_green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp">

            <Button
                android:id="@+id/camera_button"
                android:layout_width="150dp"
                android:layout_height="140dp"
                android:background="@drawable/take_poto"
                android:fontFamily="@font/tauri"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/camera_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Camera"
                android:fontFamily="@font/tauri"
                android:textColor="@color/deep_green"
                android:textSize="16sp"
                android:layout_marginTop="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/gallery_button"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:background="@drawable/take_from_galery"
                android:textColor="@color/deep_green"
                android:fontFamily="@font/tauri"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gallery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gallery"
                android:fontFamily="@font/tauri"
                android:textColor="@color/deep_green"
                android:textSize="16sp"
                android:layout_marginTop="5dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
